--- a/templates/loggedInHeader.html
+++ b/templates/loggedInHeader.html
@@ -12,7 +12,7 @@
     <div class="w3-right w3-hide-small" style="padding-top: 4pt;">
 
         <a href="userHome.html" class="w3-bar-item w3-button">Profile</a>
-      <a href="logout" class="w3-bar-item w3-button">Sign Out</a>
+      <a href="logout.html" class="w3-bar-item w3-button">Sign Out</a>
     </div>
   </div>
 </div>
